# boxproxy

./: README.md
boxctl/: Cargo.toml
boxctl/src/: cli.rs  config.rs  control.rs  core_config.rs  db.rs  exec.rs  logger.rs  main.rs  monitor.rs  resource.rs  rules.rs  service.rs  wifi.rs
boxctl/src/config/: core_values.rs
boxctl/src/core_config/: rule_set_preload.rs
boxctl/src/db/: read.rs  schema.rs
boxctl/src/logger/: catalog.rs
boxctl/src/monitor/: lock.rs  observe.rs  policy.rs  state.rs  watcher.rs
boxctl/src/rules/: batch.rs  capabilities.rs  cleanup.rs  cnip.rs  dns.rs  exec.rs  local_ip.rs  local_proxy.rs  util.rs
boxctl/src/service/: command.rs  config_check.rs  permissions.rs  process.rs
