[package]
name = "boxctl"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
jsonc-parser = { version = "0.33.0", features = ["cst", "serde", "serde_json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_jsonc2 = "0.1.2"
serde_yaml = "0.9.34"
